# car

./: README.md
client/: main.py  pyproject.toml
client/client/: main.py
client/interface/: socket.py
database/: connect.py  pyproject.toml
frontend/app/: package-lock.json  package.json
frontend/app/src/: App.tsx  index.tsx
server/: app.py  pyproject.toml
server/base/: singleton.py
server/interface/database/: connect.py
server/interface/router/: stream.py
server/interface/socket/: server.py
server/server/: app.py
