[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["JeonMinSu <minsu2530@u.sogang.ac.kr>"]

[tool.poetry.scripts]
server = "server.app:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
opencv-python = "^4.6.0.66"
sqlalchemy = "^1.4.42"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"